Fix z-index of sidebar and navigation bg color

--- a/templates/style.scss
+++ b/templates/style.scss
@@ -54,8 +54,8 @@ div.rustdoc {
 }
 
 .sidebar {
-    top: 32px;
-    left: 0;
+    padding-top: 32px;
+    z-index: -1;
 }
 
 body {
@@ -115,6 +115,7 @@ div.container-rustdoc {
 div.nav-container {
     height: 32px;
     border-bottom: 1px solid $color-border;
+    background-color: #fff;
 
     li {
         border-left: 1px solid $color-border;
